test/libyul/yulSyntaxTests/zkevm/invalid/multiplication_high.yul
{
	$zk_multiplication_high(0xa, 0xb)
}
// ====
// dialect: evm
// ----
// TypeError 3083: (3-36): Top-level expressions are not supposed to return values (this expression returns 1 value). Use ``pop()`` or assign them.
